# ROS2-Basics

./: README.md
gazebo_tutorials/: CMakeLists.txt  package.xml
gazebo_tutorials/config/: ros_gz_example_bridge.yaml
gazebo_tutorials/launch/: diff_drive.launch.py  launch_world.ign
gazebo_tutorials/urdf/: my_robot.urdf
gazebo_tutorials/world/: diff_drive.sdf  test_world.sdf
pubsub/: CMakeLists.txt  package.xml
pubsub/config/: turtlesim.yaml
pubsub/documents/: .~lock.ros2 basics.odt#  ros2 basics.odt
pubsub/launch/: main_launch.launch.py  sub_launch.launch.py  sub_launch_event_handler.launch.py  turtlesim.launch.py
pubsub/nodes/: client_python.py  pub_python.py  serv_python.py  sub_python.py
pubsub/nodes/action_nodes/: action_client.py  action_server.py
pubsub/nodes/msg_nodes/: num_pub.py  num_sub.py  sphere_pub.py  sphere_sub.py
pubsub/nodes/srv_nodes/: addthree_client.py  addthree_server.py
pubsub/turtlesim_project/: broadcaster_listener_launch.py  fixed_broadcaster_launch.py  launch_turtlesim.launch.py  mimic_launch.py  turtlesim_rviz_launch.py  turtlesim_world_1_launch.py  turtlesim_world_2_launch.py  turtlesim_world_3_launch.py
tf2_package/: CMakeLists.txt  package.xml
tf2_package/launch/: adding_dynamic_frame.launch.py  adding_fixed_frame.launch.py  broadcaster.launch.py  display.launch.py  listener.launch.py  robot_state_publisher.launch.py  static_broadcaster.launch.py
tf2_package/rviz/: tf2.rviz
tf2_package/src/: adding_dynamic_frame.py  adding_fixed_frame.py  listener.py  static_turtle_tf2_broadcaster.py  test1.py  test2.py  turtle_tf2_broadcaster.py
tf2_package/urdf/: model.urdf
urdf_tutorials/: CMakeLists.txt  package.xml
urdf_tutorials/launch/: display.launch.py  display_r2d2.launch.py  r2d2_xacro.launch.py
(+5 files in other folders)
